--- a/VaccineManagementSystem/src/UI/MainLoginJFrame.form
+++ b/VaccineManagementSystem/src/UI/MainLoginJFrame.form
@@ -106,6 +106,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btn_login">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="cc" green="cc" red="cc" type="rgb"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Login"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.BevelBorderInfo">
